Added the sdaValidator project

--- a/modaclouds-scalingrules/pom.xml
+++ b/modaclouds-scalingrules/pom.xml
@@ -1,17 +1,22 @@
-<!-- Copyright ${year} deib-polimi Contact: deib-polimi <riccardobenito.desantis@polimi.it> 
-	Licensed under the Apache License, Version 2.0 (the "License"); you may not 
-	use this file except in compliance with the License. You may obtain a copy 
-	of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
-	by applicable law or agreed to in writing, software distributed under the 
-	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
-	OF ANY KIND, either express or implied. See the License for the specific 
+<!-- Copyright ${year} deib-polimi Contact: deib-polimi <riccardobenito.desantis@polimi.it>
+	Licensed under the Apache License, Version 2.0 (the "License"); you may not
+	use this file except in compliance with the License. You may obtain a copy
+	of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
+	by applicable law or agreed to in writing, software distributed under the
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
+	OF ANY KIND, either express or implied. See the License for the specific
 	language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>it.polimi.modaclouds.scalingrules</groupId>
+    <parent>
+        <groupId>it.polimi.modaclouds.tests</groupId>
+        <artifactId>tests</artifactId>
+        <version>0.1</version>
+    </parent>
 	<artifactId>scalingrules</artifactId>
 	<version>0.0.1</version>
+    <name>MODAClous - Scaling Rules</name>
 
 	<licenses>
 		<license>
@@ -137,7 +142,7 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
-                        <!-- <configuration> <descriptors> <descriptor>assembly-dist.xml</descriptor> 
+                        <!-- <configuration> <descriptors> <descriptor>assembly-dist.xml</descriptor>
                             </descriptors> </configuration> -->
                     </execution>
                 </executions>
@@ -160,7 +165,7 @@
 					<repositoryOwner>deib-polimi</repositoryOwner>    <!-- github username -->
 				</configuration>
 				<executions>
-					<!-- run site-maven-plugin's 'site' target as part of the build's normal 
+					<!-- run site-maven-plugin's 'site' target as part of the build's normal
 						'deploy' phase -->
 					<execution>
 						<goals>
@@ -191,7 +196,7 @@
 						<exclude>LICENSE.txt</exclude>
 					</excludes>
 				</configuration>
-				<!-- <executions> <execution> <id>check-headers</id> <phase>verify</phase> 
+				<!-- <executions> <execution> <id>check-headers</id> <phase>verify</phase>
 					<goals> <goal>format</goal> </goals> </execution> </executions> -->
 			</plugin>
 			<plugin>
@@ -251,7 +256,7 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
-                        <!-- <configuration> <descriptors> <descriptor>assembly-dist.xml</descriptor> 
+                        <!-- <configuration> <descriptors> <descriptor>assembly-dist.xml</descriptor>
                             </descriptors> </configuration> -->
                     </execution>
                 </executions>
@@ -283,7 +288,7 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
-			
+
 				<plugin>
 					<groupId>org.jvnet.jaxb2.maven2</groupId>
 					<artifactId>maven-jaxb2-plugin</artifactId>
