--- a/modaclouds-sdatests/pom.xml
+++ b/modaclouds-sdatests/pom.xml
@@ -1,9 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>it.polimi.modaclouds.sdatests</groupId>
+    <parent>
+        <groupId>it.polimi.modaclouds.tests</groupId>
+        <artifactId>tests</artifactId>
+        <version>0.1</version>
+    </parent>
 	<artifactId>sdatests</artifactId>
 	<version>0.0.3</version>
+    <name>MODAClous - SDA Tests</name>
 
 	<repositories>
 		<repository>
@@ -89,7 +94,7 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
-                        <!-- <configuration> <descriptors> <descriptor>assembly-dist.xml</descriptor> 
+                        <!-- <configuration> <descriptors> <descriptor>assembly-dist.xml</descriptor>
                             </descriptors> </configuration> -->
                     </execution>
                 </executions>
