--- a/modaclouds-scalingrules/pom.xml
+++ b/modaclouds-scalingrules/pom.xml
@@ -16,7 +16,7 @@
     </parent>
 	<artifactId>scalingrules</artifactId>
 	<version>0.0.1</version>
-    <name>MODAClous - Scaling Rules</name>
+    <name>MODAClouds - Scaling Rules</name>
 
 	<licenses>
 		<license>
