--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<artifactId>tests</artifactId>
 	<version>0.1</version>
 	<packaging>pom</packaging>
-	<name>MODAClous - Tests</name>
+	<name>MODAClouds - Tests</name>
 	<modules>
 		<module>modaclouds-sdatests</module>
 		<module>modaclouds-scalingrules</module>
