--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -53,6 +53,6 @@ sda_DISK=20
 sda_OS=Linux/UNIX
 sda_SSH_USER=ubuntu
 sda_SSH_PASS=ubuntu
-sda_STARTER=cd /home/ubuntu/modaclouds-sda-1.2.2 && sudo nohup bash run_main.sh /usr/local/MATLAB/MATLAB_Compiler_Runtime/v81/ kb 8176 %s:8170 mic-frontend-mon > /home/ubuntu/sda.out
+sda_STARTER=cd /home/ubuntu/modaclouds-sda-1.2.2 && sudo nohup bash run_main.sh /usr/local/MATLAB/MATLAB_Compiler_Runtime/v81/ kb 8176 %s:8170 mic-frontend-mon > /home/ubuntu/sda.out 2>&1
 sda_DELETE_FILES=/home/ubuntu/sda.out;/home/ubuntu/cpu.out;/home/ubuntu/cpuSteal.out;/home/ubuntu/rt.out;/home/ubuntu/d.out;/home/ubuntu/wlforFirst.out;/home/ubuntu/wlforSecond.out;/home/ubuntu/wlforThird.out;/home/ubuntu/wlforFourth.out;/home/ubuntu/wlforFifth.out;/home/ubuntu/wl.out;/home/ubuntu/thresholds.out
 sda_RETRIEVE_FILES=/home/ubuntu/sda.out;/home/ubuntu/cpu.out;/home/ubuntu/cpuSteal.out;/home/ubuntu/rt.out;/home/ubuntu/d.out;/home/ubuntu/wlforFirst.out;/home/ubuntu/wlforSecond.out;/home/ubuntu/wlforThird.out;/home/ubuntu/wlforFourth.out;/home/ubuntu/wlforFifth.out;/home/ubuntu/wl.out;/home/ubuntu/thresholds.out
