--- a/sdaValidator/pom.xml
+++ b/sdaValidator/pom.xml
@@ -7,10 +7,9 @@
     </parent>
     <groupId>it.polimi.modaclouds.monitoring</groupId>
     <artifactId>sdaValidator</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2</version>
     <packaging>jar</packaging>
     <name>MODAClouds - SDA Validator</name>
-    <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
