The instance running MIC will have its version of MIC updated to the latest snapshot when starting, so that it will always have the latest version of it.

--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -23,6 +23,7 @@ mic_SSH_USER=ubuntu
 mic_SSH_PASS=ubuntu
 mic_PROTOCOL = http
 mic_PORT = 8080
+mic_INIT_FILE=initMIC
 mic_STARTER0=sudo bash /home/ubuntu/snapshotMICStarter %s %s
 mic_STARTER1=source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
 
