Updated for using the new AMI created.

--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -5,15 +5,18 @@ CLOUDML_IP=localhost
 CLOUDML_PORT=9000
 MONITORING_PLATFORM_PORT=8170
 
+MIC_AMI=ami-37790e40
+MIC_STARTER=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/snapshotMICStarter 127.0.0.1 %s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
+
 mpl_KEYPAIR_NAME=desantis-ireland
-mpl_AMI=ami-99a23dee
+mpl_AMI=ami-a72152d0
 mpl_SIZE=m3.large
 mpl_INSTANCES=1
 mpl_DISK=8
 mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
-mpl_STARTER=bash /home/ubuntu/snapshotMPStarter
+mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
