--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -23,8 +23,7 @@ mic_SSH_USER=ubuntu
 mic_SSH_PASS=ubuntu
 mic_PROTOCOL = http
 mic_PORT = 8080
-mic_INIT_FILE=initMIC
-mic_STARTER0=sudo bash /home/ubuntu/snapshotMICStarter %s %s
+mic_STARTER0=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/snapshotMICStarter %s %s
 mic_STARTER1=source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
 
 database_KEYPAIR_NAME=desantis-ireland
@@ -37,14 +36,14 @@ database_SSH_USER=ubuntu
 database_SSH_PASS=ubuntu
 
 mpl_KEYPAIR_NAME=desantis-ireland
-mpl_AMI=ami-99a23dee
+mpl_AMI=ami-a72152d0
 mpl_SIZE=m3.large
 mpl_INSTANCES=1
 mpl_DISK=8
 mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
-mpl_STARTER=bash /home/ubuntu/snapshotMPStarter
+mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
 
 sda_KEYPAIR_NAME=desantis-ireland
 sda_AMI=ami-9fa23de8
