--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -5,8 +5,10 @@ CLOUDML_IP=localhost
 CLOUDML_PORT=9000
 MONITORING_PLATFORM_PORT=8170
 
-MIC_AMI=ami-37790e40
+MIC_AMI=ami-052c5f72
 MIC_STARTER=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/snapshotMICStarter 127.0.0.1 %s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
+MIC_ADD_TO_LOAD_BALANCER=bash add_to_loadBalancer %s
+MIC_DEL_FROM_LOAD_BALANCER=bash deregister_from_lb %s
 
 mpl_KEYPAIR_NAME=desantis-ireland
 mpl_AMI=ami-a72152d0
