--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -5,10 +5,11 @@ CLOUDML_IP=localhost
 CLOUDML_PORT=9000
 MONITORING_PLATFORM_PORT=8170
 
-MIC_AMI=ami-052c5f72
+MIC_AMI=ami-6dbbc81a
 MIC_STARTER=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/snapshotMICStarter 127.0.0.1 %s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
 MIC_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
 MIC_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
+MIC_PORT=8080
 
 mpl_KEYPAIR_NAME=desantis-ireland
 mpl_AMI=ami-a72152d0
