Tons of improvements.

--- a/modaclouds-scalingrules/pom.xml
+++ b/modaclouds-scalingrules/pom.xml
@@ -329,7 +329,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20141113</version>
+			<version>20140107</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cloudml</groupId>
@@ -345,6 +345,12 @@
 			<groupId>it.polimi.tower4clouds</groupId>
 			<artifactId>rules</artifactId>
 			<version>0.2-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>it.polimi.modaclouds.qos-models</groupId>
@@ -376,7 +382,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
+			<version>1.7.10</version>
 		</dependency>
         <dependency>
             <groupId>com.beust</groupId>
