--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
 	<modules>
 		<module>modaclouds-sdatests</module>
 		<module>modaclouds-scalingrules</module>
-        <module>sdaValidator</module>
+		<module>sdaValidator</module>
+		<module>CloudMLDaemon</module>
 	</modules>
 
 </project>
