--- a/CloudMLDaemon/resources/log4j.properties
+++ b/CloudMLDaemon/resources/log4j.properties
@@ -16,4 +16,4 @@ log4j.appender.debuggerAppender.Append=true
 log4j.appender.eclipse=org.apache.log4j.ConsoleAppender
 log4j.appender.eclipse.layout=org.apache.log4j.PatternLayout
 #log4j.appender.eclipse.layout.ConversionPattern=%-5p %20.20c{1}:%-5.5L - %m%n
-log4j.appender.eclipse.layout.ConversionPattern=%d{HH:mm:ss} [ScalingRules] %m%n
+log4j.appender.eclipse.layout.ConversionPattern=%d{HH:mm:ss} [CloudMLDaemon] %m%n
